@@ -4,6 +4,13 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2018-04-18
+
+  - Fixed #264: Converted zip compression in bake from using an external zip
+    tool to using the 'zipfile' module packaged with Python. I'm doing this to
+    fix the CI build as well.
+
+
 2018-04-17
 
   - Fixed #265: Refined the timezone specification of the price sources. In
